fix overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* overflow: hidden; */
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .next-scene {
